# sparrow-ipc

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.py  environment-dev-external-deps.yml  environment-dev.yml  sparrow-ipcConfig.cmake.in
.github/: copilot-instructions.md
.github/workflows/: analysis.yml  conan.yaml  docs.yaml  integration_tests.yaml  linux.yml  osx.yml  release.yaml  windows.yml
ci/docker/: integration.dockerfile
cmake/: Findlz4.cmake  code_coverage.cmake  external_dependencies.cmake  sparrow-ipcConfig.cmake.in
docs/: CMakeLists.txt  Doxyfile.in
docs/source/: dev_build.md  main_page.md  serialization.md
examples/: CMakeLists.txt  write_and_read_streams.cpp
include/: serialize.hpp  serialize_null_array.hpp  serialize_primitive_array.hpp  sparrow-ipc.hpp  utils.hpp
include/config/: config.hpp  sparrow_ipc_version.hpp
include/sparrow_ipc/: any_output_stream.hpp  chunk_memory_output_stream.hpp  chunk_memory_serializer.hpp  compression.hpp  concepts.hpp  deserialize.hpp  deserialize_array_impl.hpp  deserialize_decimal_array.hpp  deserialize_duration_array.hpp  deserialize_fixedsizebinary_array.hpp  deserialize_interval_array.hpp  deserialize_null_array.hpp  deserialize_primitive_array.hpp  deserialize_time_related_arrays.hpp  deserialize_utils.hpp  deserialize_variable_size_binary_array.hpp  deserializer.hpp  encapsulated_message.hpp  file_output_stream.hpp  flatbuffer_utils.hpp  magic_values.hpp  memory_output_stream.hpp  metadata.hpp  output_stream.hpp  serialize.hpp  serialize_primitive_array.hpp  serialize_utils.hpp  serializer.hpp  stream_file_format.hpp  stream_file_format_impl.hpp  stream_file_serializer.hpp  utils.hpp
include/sparrow_ipc/arrow_interface/: arrow_array.hpp  arrow_array_schema_common_release.hpp  arrow_schema.hpp
include/sparrow_ipc/arrow_interface/arrow_array/: private_data.hpp
include/sparrow_ipc/arrow_interface/arrow_schema/: private_data.hpp
include/sparrow_ipc/config/: sparrow_ipc_version.hpp
integration_tests/: CMakeLists.txt  README.md  arrow_file_to_stream.cpp  arrow_json_to_file.cpp  arrow_stream_to_file.cpp  arrow_validate.cpp  file_to_stream.cpp  stream_to_file.cpp  test_integration_tools.cpp
integration_tests/include/: integration_tools.hpp
integration_tests/src/: integration_tools.cpp
src/: any_output_stream.cpp  chunk_memory_serializer.cpp  compression.cpp  compression_impl.hpp  deserialize.cpp  deserialize_fixedsizebinary_array.cpp  deserialize_null_array.cpp  deserialize_utils.cpp  encapsulated_message.cpp  file_output_stream.cpp  flatbuffer_utils.cpp  magic_values.cpp  main.cpp  metadata.cpp  serialize.cpp  serialize_null_array.cpp  serialize_utils.cpp  serializer.cpp  sparrow-ipc.cpp  stream_file_format.cpp  stream_file_serializer.cpp  utils.cpp
src/arrow_interface/: arrow_array.cpp  arrow_schema.cpp
src/arrow_interface/arrow_array/: private_data.cpp
src/arrow_interface/arrow_schema/: private_data.cpp
tests/: CMakeLists.txt  main.cpp  metadata_sample.hpp  test.cpp  test_any_output_stream.cpp  test_arrow_schema.cpp  test_chunk_memory_output_stream.cpp  test_chunk_memory_serializer.cpp  test_compression.cpp  test_de_serialization_with_files.cpp  test_deserialization_with_files.cpp  test_deserializer.cpp  test_file_format.cpp  test_file_output_stream.cpp  test_flatbuffer_utils.cpp  test_memory_output_streams.cpp  test_null_array_serialization.cpp  test_primitive_array.cpp  test_primitive_array_serialization.cpp  test_primitive_array_with_files.cpp  test_serialize_null_array.cpp  test_serialize_utils.cpp  test_serializer.cpp  test_stream_file_serializer.cpp  test_utils.cpp
tests/include/: sparrow_ipc_tests_helpers.hpp
tests/resources/: generated_primitive.json  generated_primitive_large_offsets.json
